fix the whatsap icon and give the max z-index value of close btn in photo gallery

--- a/src/App.css
+++ b/src/App.css
@@ -7,14 +7,14 @@
 .hii {
   position: fixed;
   left: 20px;
-  bottom: 60px;
+  bottom: 70px;
   color: white;
 }
 .contactIcon{
   background-color: rgb(7, 143, 37);
   align-items: center;
   text-align: center;
-  padding: 10px;
+  padding: 12px;
   border-radius: 50px;
   z-index: 100;
   position: fixed;
