--- a/src/components/Gallery/PhotoGallery/Test.css
+++ b/src/components/Gallery/PhotoGallery/Test.css
@@ -56,6 +56,7 @@
 .btnClose {
     font-size: 30px;
     color: white;
+    z-index: 100000;
     font-weight: bold;
 }
 
